# cjk-autocorrect-desktop

./: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  PRIVACY.md  README.en.md  README.md  index.html  package.json  pnpm-lock.yaml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
src/: App.tsx  i18n.ts  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: dto.rs  errors.rs  lib.rs  main.rs  shortcut.rs  state.rs
src-tauri/src/commands/: app_config.rs  clipboard.rs  engine_cmd.rs  format_cmd.rs  history_cmd.rs  mod.rs
src-tauri/src/config/: app_config.rs
src-tauri/src/engine/: autocorrect_cli.rs  embedded_autocorrect.rs  mod.rs  types.rs
src-tauri/src/history_store/: store.rs
src-tauri/src/services/: formatter.rs
src/components/: FormatPage.tsx  HistoryPage.tsx  SettingsPage.tsx
src/lib/: commands.ts  diff.ts  errors.ts
src/stores/: config.ts  engine.ts  format.ts  history.ts
